[package]
name = "namsex-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17"
uuid = { version = "1.2", features = ["v4", "wasm-bindgen", "js"] }
tokio = { version = "1.23", default-features = false, features = ["sync"] }
